--- a/Info/info.html
+++ b/Info/info.html
@@ -19,12 +19,12 @@
       <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
   </div>
   <div class="container">
-    <h1 class="text-center mt-5 text-light"><strong>Suscribite al Newsletter :)</strong></h1>
+    <h1 class="text-center p-2 text-light"><strong>Suscribite al Newsletter :)</strong></h1>
     <p class="text-light text-center m-3">Completá tus datos acá abajo y vas a recibir un mail semanal con los mejores lugares para salir a comer en Buenos Aires!</p>
-    <div class="d-flex flex-wrap justify-content-around align-content-center m-4">
-      <div><img src="./imagenes/Ñoquis.jpg" style="height:400px;" alt="Ñoquis"></div>
-      <div><img src="./imagenes/CafeAnafe.jpg" style="height:400px;" alt="Café"></div>
-      <div><img src="./imagenes/Argot.jpg" style="height:400px;" alt="Panera"></div>
+    <div class="d-flex flex-wrap justify-content-center align-content-center m-4">
+      <div><img src="./imagenes/Ñoquis.jpg" style="height:280px; width: 220px;" alt="Ñoquis"></div>
+      <div><img src="./imagenes/CafeAnafe.jpg" style="height:280px; width: 220px;" alt="Café"></div>
+      <div><img src="./imagenes/Argot.jpg" style="height:280px; width: 220px;" alt="Panera"></div>
     </div>
     <div class="row ms-5 me-5 m-3">
       <div class="col">
