--- a/Hora/hora.html
+++ b/Hora/hora.html
@@ -23,15 +23,17 @@
         <div id="titulo"><b>Dónde ir a tomar café</b></div>
         <div id="texto">Te dejo un mapa con cafeterías en Buenos Aires que tienen buen café y cosas ricas para acompañar :)</div>
     </div>
-    <div style="margin-left: 300px; margin-right: 300px;" class="d-flex align-content-center align-items-center justify-content-center flex-wrap flex-direction-column mb-4 position-relative">
-        <img style="height: 200px;" src="./imagenes/Cuervo.HEIC" alt="Cafeterías">
-        <img style="height: 200px;" src="./imagenes/Birkin.HEIC" alt="Cafeterías">
-        <img style="height: 200px;" src="./imagenes/Borja.HEIC" alt="Cafeterías">
-        <img style="height: 200px;" src="./imagenes/Lharmonie.JPG" alt="Cafeterías">
-        <img style="height: 200px;" src="./imagenes/Anafe.HEIC" alt="Cafeterías">
-        <img style="height: 200px;" src="./imagenes/Blanca.HEIC" alt="Cafeterías">
-        <img style="height: 200px;" src="./imagenes/Jisu.HEIC" alt="Cafeterías">
-        <img style="height: 200px;" src="./imagenes/Anafe2.HEIC" alt="Cafeterías">
-        <a href="https://goo.gl/maps/JW2w3oPtcKKLaNSY8" class="link position-absolute text-decoration-none">Mapa de Cafeterías</a>
+    <div class="container">
+        <div class="tamaño d-flex align-content-center align-items-center justify-content-center flex-wrap flex-direction-column mb-4 position-relative">
+            <img class="tamañoFoto" src="./imagenes/Cuervo.HEIC" alt="Cafeterías">
+            <img class="tamañoFoto" src="./imagenes/Birkin.HEIC" alt="Cafeterías">
+            <img class="tamañoFoto" src="./imagenes/Borja.HEIC" alt="Cafeterías">
+            <img class="tamañoFoto" src="./imagenes/Lharmonie.JPG" alt="Cafeterías">
+            <img class="tamañoFoto" src="./imagenes/Anafe.HEIC" alt="Cafeterías">
+            <img class="tamañoFoto" src="./imagenes/Blanca.HEIC" alt="Cafeterías">
+            <img class="tamañoFoto" src="./imagenes/Jisu.HEIC" alt="Cafeterías">
+            <img class="tamañoFoto" src="./imagenes/Anafe2.HEIC" alt="Cafeterías">
+            <a href="https://goo.gl/maps/JW2w3oPtcKKLaNSY8" class="link position-absolute text-decoration-none">Mapa de Cafeterías</a>
+        </div>
     </div>
 </html>
