--- a/Comida/comida.html
+++ b/Comida/comida.html
@@ -23,7 +23,7 @@
         <div id="titulo"><b>Rutas gastronómicas</b></div>
         <div id="texto">Estás con ganas de comer una buena hamburguesa? ¿Te levantaste con ganas de desayunar unas ricas medialunas o estás tentado de algo dulce? Estás en el lugar indicado!</div>
     </div>
-    <div class="d-flex justify-content-around align-content-center">
+    <div class="d-flex flex-wrap justify-content-around align-content-center">
       <div class="card" style="width: 16rem; height: 34rem; margin: 30px;">
         <img src="./imagenes/Hamburguesa.JPG" class="card-img-top" style="width: auto; height: 320px;" alt="Hamburguesas">
         <div class="card-body">
