--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comer en BA</title>
+    <script src="/script.js"></script>
 </head>
 <body>
     <div class="menu">
