perdon fuera de entrega pero era un centrado mini

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="buscador">
             <div id="textoB"><b>¿Tenés algo en mente que querés comer?</b></div>
             <div id="textoC">Buscalo acá y te tiramos recomendaciones!</div>
-            <div class="m-12 d-flex align-items-center">
+            <div class="m-12 d-flex align-items-center align-content-center justify-content-center">
                 <input type="text" class="m-2" id="inputComida" placeholder="Ingresa una comida">
                 <button type="button" class="btn btn-secondary" onclick="sugerirLugarComida()">Buscar</button>
             </div>
